[gd_scene load_steps=17 format=2]

[ext_resource path="res://theme/fonts/text.font.normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://interfaces/assets/Worn-Parchment-BG-1.png" type="Texture" id=2]
[ext_resource path="res://interfaces/label/PixelLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://interfaces/buttons/PrevSettingsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://interfaces/assets/Background by ansimuz.png" type="Texture" id=5]
[ext_resource path="res://interfaces/settings/ResolutionOptions.gd" type="Script" id=6]
[ext_resource path="res://interfaces/settings/LanguageOptions.gd" type="Script" id=7]
[ext_resource path="res://theme/slider/hslider.tres" type="Theme" id=8]
[ext_resource path="res://interfaces/buttons/SaveButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://interfaces/settings/Settings.gd" type="Script" id=11]
[ext_resource path="res://interfaces/settings/Settings.tres" type="Theme" id=13]
[ext_resource path="res://audio/general-sounds/fanfares/sfx_sounds_fanfare2.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Save"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Validation:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 2, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -480, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -480, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SaveBtn:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Setup"
tracks/0/type = "value"
tracks/0/path = NodePath("SaveBtn:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.486275, 0.388235, 0.270588, 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.486275, 0.388235, 0.270588, 1 )
thickness = 3

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Save = SubResource( 1 )
anims/Setup = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 51.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parchment" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
margin_top = 27.0
margin_right = 0.0
margin_bottom = 47.0
text = "UI_SETTINGS"
align = 1

[node name="Display" type="Control" parent="."]
margin_top = -16.0
margin_right = 40.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTitle" parent="Display" instance=ExtResource( 3 )]
anchor_right = 1.0
margin_left = 48.0
margin_top = 64.0
margin_right = 110.0
margin_bottom = 84.0
text = "UI_DISPLAY"

[node name="ResolutionLabel" parent="Display" instance=ExtResource( 3 )]
margin_left = 60.0
margin_top = 94.0
margin_right = 140.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 1 )
text = "UI_RESOLUTION"

[node name="ResolutionOptions" type="OptionButton" parent="Display"]
margin_left = 190.0
margin_top = 93.0
margin_right = 234.0
margin_bottom = 116.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 1 )
text = "1920x1080"
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" parent="Display" instance=ExtResource( 3 )]
margin_left = 60.0
margin_top = 117.0
margin_right = 176.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 1 )
text = "UI_FULLSCREEN"

[node name="FullscreenChk" type="CheckBox" parent="Display"]
margin_left = 191.0
margin_top = 115.0
margin_right = 215.0
margin_bottom = 140.0
theme = ExtResource( 13 )

[node name="LanguageLabel" parent="Display" instance=ExtResource( 3 )]
margin_left = 61.0
margin_top = 139.0
margin_right = 159.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 1 )
text = "UI_LANGUAGE"

[node name="LanguageOptions" type="OptionButton" parent="Display"]
margin_left = 191.0
margin_top = 137.0
margin_right = 299.0
margin_bottom = 160.0
theme = ExtResource( 13 )
text = "English"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Control" parent="."]
margin_left = 1.0
margin_top = 8.0
margin_right = 41.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioTitle" parent="Audio" instance=ExtResource( 3 )]
anchor_right = 1.0
margin_left = 48.0
margin_top = 144.0
margin_right = 88.0
margin_bottom = 164.0
text = "UI_AUDIO"

[node name="MasterLabel" parent="Audio" instance=ExtResource( 3 )]
margin_left = 60.0
margin_top = 172.0
margin_right = 140.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 1 )
text = "UI_MASTER"

[node name="MasterSlider" type="HSlider" parent="Audio"]
margin_left = 192.0
margin_top = 171.0
margin_right = 343.0
margin_bottom = 187.0
theme = ExtResource( 8 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -40.0
max_value = 0.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Audio/MasterSlider"]
wait_time = 0.25
one_shot = true

[node name="MusicLabel" parent="Audio" instance=ExtResource( 3 )]
margin_left = 60.0
margin_top = 195.0
margin_right = 140.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 1 )
text = "UI_MUSIC"

[node name="MusicSlider" type="HSlider" parent="Audio"]
margin_left = 192.0
margin_top = 195.0
margin_right = 343.0
margin_bottom = 211.0
theme = ExtResource( 8 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -40.0
max_value = 0.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveBtn" parent="." instance=ExtResource( 10 )]
margin_left = 389.0
margin_top = 212.0
margin_right = 429.0
margin_bottom = 252.0

[node name="PrevSettingsButton" parent="." instance=ExtResource( 4 )]
margin_left = 336.0
margin_top = 216.0
margin_right = 376.0
margin_bottom = 256.0

[node name="Validation" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_right = -480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Validation"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.05176e-05
margin_top = -24.0
margin_right = 6.10352e-05
margin_bottom = 16.0
color = Color( 0.247059, 0.247059, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PixelLabel" parent="Validation" instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.05176e-05
margin_top = -13.0
margin_right = 3.05176e-05
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "UI_SAVE_SUCCESS"
align = 1
